--- a/README.html
+++ b/README.html
@@ -121,50 +121,42 @@ $(document).ready(function () {
 </div>
 
 
-<div id="winterconfhemavan2019" class="section level1">
-<h1>WinterConfHemavan2019</h1>
-<p>Material for my lectures on ‘Bayesian Machine Learning’ at the <a href="https://www.umu.se/en/winter-conference-in-statistics-2019/">Winter Conference in Statistics</a>, <a href="https://www.google.com/maps/place/920+66+Hemavan/@65.902074,6.1270886,5z/data=!4m5!3m4!1s0x4676882066e6040b:0xd2ce47df9c5d9884!8m2!3d65.814906!4d15.0876887">Hemavan</a>, Sweden, March 11-14, 2019.</p>
+<div id="lectures-on-bayesian-machine-learning" class="section level1">
+<h1>Lectures on Bayesian Machine Learning</h1>
+<p>@ <a href="https://www.umu.se/en/winter-conference-in-statistics-2019/">The Winter Conference in Statistics</a>, <a href="https://www.google.com/maps/place/920+66+Hemavan/@65.902074,6.1270886,5z/data=!4m5!3m4!1s0x4676882066e6040b:0xd2ce47df9c5d9884!8m2!3d65.814906!4d15.0876887">Hemavan</a>, Sweden, March 11-14, 2019.</p>
 <hr />
-<div id="about-me" class="section level3">
-<h3>About me</h3>
-<p><a href="https://www.mattiasvillani.com/"><strong>Mattias Villani</strong></a><br />
-<strong>Who?</strong>   Professor of Statistics at Stockholm and Linköping University.<br />
-<strong>What?</strong>   Research: Computationally efficient Bayesian methods for inference, prediction and decision making with flexible probabilistic models.<br />
-Teaching: courses in Bayesian Learning, Introduction to Machine Learning, Advanced Machine Learning, Text Mining, Machine Learning for Industry, Probability and Statistics for Machine Learning etc<br />
-<strong>Why?</strong> - Applications in Transportation, Neuroimaging, Robotics, Econometrics and Software developement.</p>
+<p><strong>Lecturer:</strong> <a href="https://www.mattiasvillani.com/"><strong>Mattias Villani</strong></a><br />
+<strong>Positions:</strong> Professor of Statistics at Stockholm and Linköping University.<br />
+<strong>Research:</strong> Computationally efficient Bayesian methods for inference, prediction and decision making with flexible probabilistic models.<br />
+<strong>Teaching:</strong> Bayesian Learning, Introduction to Machine Learning, Advanced Machine Learning, Text Mining, Machine Learning for Industry, Probability and Statistics for Machine Learning etc<br />
+<strong>Current Application Areas:</strong> Transportation, Neuroimaging, Robotics, Econometrics and Software Developement.<br />
+<strong>Web:</strong> <a href="https://www.mattiasvillani.com/">Web page</a><br />
+<strong>Google Scholar:</strong> <a href="https://scholar.google.se/citations?user=lyW8fWYAAAAJ&amp;hl=sv">Profile</a><br />
+<strong>Genealogy:</strong> <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=104187">Mathematics Genealogy Project</a></p>
 <hr />
 <div id="lecture-1---the-bayesics." class="section level5">
 <h5>Lecture 1 - The Bayesics.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapters X.X-Y.Y in <a href="book">Book Name</a>.<br />
-Code:<br />
-Other material:<br />
-Software:</p>
+<p>Reading: <a href="SLIDES">Slides</a> | Chapter 1 in <a href="https://www.springer.com/us/book/9780387310732">Pattern Recognition and Machine Learning</a>.<br />
+Code:</p>
 <hr />
 </div>
 <div id="lecture-2---gaussian-process-regression." class="section level5">
 <h5>Lecture 2 - Gaussian Process Regression.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapters X.X-Y.Y in <a href="book">Book Name</a>.<br />
-Code:<br />
-Other material:<br />
-Software:</p>
+<p>Reading: <a href="SLIDES">Slides</a> | Chapter 2 and 4-5 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a>.<br />
+Code:</p>
 <hr />
 </div>
 <div id="lecture-3---gaussian-processes-in-action." class="section level5">
 <h5>Lecture 3 - Gaussian Processes in Action.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapters X.X-Y.Y in <a href="book">Book Name</a>.<br />
-Code:<br />
-Other material:<br />
-Software:</p>
+<p>Reading: <a href="SLIDES">Slides</a> | Chapter 3 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a>.<br />
+[comment]: &lt;&gt; (Extras: <a href="https://www.youtube.com/watch?v=Ok3CE314mSQ">Searching drone video</a>)</p>
 <hr />
 </div>
 <div id="lecture-4---bayesian-optimization." class="section level5">
 <h5>Lecture 4 - Bayesian Optimization.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapters X.X-Y.Y in <a href="book">Book Name</a>.<br />
-Code:<br />
-Other material:<br />
-Software:</p>
+<p>Reading: <a href="SLIDES">Slides</a> | <a href="https://arxiv.org/pdf/1206.2944.pdf">Paper</a><br />
+Code:</p>
 <hr />
-</div>
 </div>
 </div>
 
