--- a/README.html
+++ b/README.html
@@ -149,7 +149,7 @@ Code:</p>
 <div id="lecture-3---gaussian-processes-in-action." class="section level5">
 <h5>Lecture 3 - Gaussian Processes in Action.</h5>
 <p>Reading: <a href="SLIDES">Slides</a> | Chapter 3 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a>.<br />
-[comment]: &lt;&gt; (Extras: <a href="https://www.youtube.com/watch?v=Ok3CE314mSQ">Searching drone video</a>)</p>
+[comment]: # (Extras: <a href="https://www.youtube.com/watch?v=Ok3CE314mSQ">Searching drone video</a>)</p>
 <hr />
 </div>
 <div id="lecture-4---bayesian-optimization." class="section level5">
