--- a/README.html
+++ b/README.html
@@ -134,27 +134,26 @@ $(document).ready(function () {
 <strong>Google Scholar:</strong> <a href="https://scholar.google.se/citations?user=lyW8fWYAAAAJ&amp;hl=sv">Profile</a><br />
 <strong>Genealogy:</strong> <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=104187">Mathematics Genealogy Project</a></p>
 <hr />
-<div id="lecture-1---the-bayesics." class="section level5">
-<h5>Lecture 1 - The Bayesics.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapter 1 in <a href="https://www.springer.com/us/book/9780387310732">Pattern Recognition and Machine Learning</a>.<br />
-Code:</p>
+<div id="lecture-1---the-bayesics" class="section level5">
+<h5>Lecture 1 - The Bayesics</h5>
+<p>Reading: <a href="https://github.com/mattiasvillani/WinterConfHemavan2019/raw/master/Slides/Lecture1.pdf">Slides</a> | Chapter 1 in <a href="https://www.springer.com/us/book/9780387310732">Pattern Recognition and Machine Learning</a>.<br />
+Code: <a href="https://github.com/mattiasvillani/WinterConfHemavan2019/raw/master/Code/FindMaxDose.R">Bayesian regression</a></p>
 <hr />
 </div>
-<div id="lecture-2---gaussian-process-regression." class="section level5">
-<h5>Lecture 2 - Gaussian Process Regression.</h5>
+<div id="lecture-2---gaussian-process-regression" class="section level5">
+<h5>Lecture 2 - Gaussian Process Regression</h5>
 <p>Reading: <a href="SLIDES">Slides</a> | Chapter 2 and 4-5 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a>.<br />
-Code:</p>
+Code: <a href="https://github.com/mattiasvillani/WinterConfHemavan2019/raw/master/Code/GP4LidarData.R">GP for LIDAR data</a></p>
 <hr />
 </div>
-<div id="lecture-3---gaussian-processes-in-action." class="section level5">
-<h5>Lecture 3 - Gaussian Processes in Action.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | Chapter 3 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a>.<br />
-[comment]: # (Extras: <a href="https://www.youtube.com/watch?v=Ok3CE314mSQ">Searching drone video</a>)</p>
-<hr />
+<div id="lecture-3---gaussian-processes-in-action---bayesian-optimization" class="section level5">
+<h5>Lecture 3 - Gaussian Processes in Action - Bayesian Optimization</h5>
+<p>Reading: <a href="SLIDES">Slides</a> | Chapter 3 in <a href="http://www.gaussianprocess.org/gpml/chapters/RW.pdf">Gaussian Processes for Machine Learning</a> | <a href="https://arxiv.org/pdf/1206.2944.pdf">BayesOpt Paper</a>.<br />
+—</p>
 </div>
-<div id="lecture-4---bayesian-optimization." class="section level5">
-<h5>Lecture 4 - Bayesian Optimization.</h5>
-<p>Reading: <a href="SLIDES">Slides</a> | <a href="https://arxiv.org/pdf/1206.2944.pdf">Paper</a><br />
+<div id="lecture-4---topic-models-for-text" class="section level5">
+<h5>Lecture 4 - Topic Models for Text</h5>
+<p>Reading: <a href="SLIDES">Slides</a> | <a href="http://www.cs.columbia.edu/~blei/papers/BleiNgJordan2003.pdf">original topic model article</a> | <a href="http://www.cs.columbia.edu/~blei/papers/Blei2012.pdf">Topic model intro</a> | <a href="http://liu.diva-portal.org/smash/get/diva2:1201965/FULLTEXT01.pdf">Intro PhD thesis Måns Magnusson</a><br />
 Code:</p>
 <hr />
 </div>
